@@ -129,6 +129,9 @@
 
 -guess_indent	Guess indent character (tab or space).
 
+-menu_above	Position menu/list above prompt when enabled.  Otherwise position
+		below prompt.
+
 -menu_explorer Stay in menu system when a directory is selected (otherwise
                 directory is added to path and menu is closed).
 
