@@ -9,6 +9,8 @@ Sat Mar  4 21:59:22 EST 2006
 	File selection menu is now above prompt instead of below it.  This
 	needs to be an option.
 
+	Added new "-menu_above" option.
+
 Wed Mar  1 10:19:49 EST 2006
 
 	Match how Thomas Dickey implemented the xterm-paste patch.
